force-app/main/default/objects/CompletedSurvey__c/CompletedSurvey__c.object-meta.xml
<CustomObject>
    <label>Completed Survey</label>
    <nameField>
        <displayFormat>SURVEY-{0}</displayFormat>
        <label>Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Completed Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>