force-app/main/default/objects/CompletedSurvey__c/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <label>Additional Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>