force-app/main/default/objects/CompletedSurvey__c/fields/How_Did_we_Do__c.field-meta.xml
<CustomField>
    <fullName>How_Did_we_Do__c</fullName>
    <label>How would you rate your experience?</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>