force-app/main/default/objects/CompletedSurvey__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>