force-app/main/default/objects/CompletedSurvey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>How_Did_we_Do__c</columns>
    <columns>Communication__c</columns>
    <columns>Resolution__c</columns>
    <columns>Additional_Comments__c</columns>
    <columns>User__c</columns>
    <columns>Customer_Email__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>